# pubsec-best-practices

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/scripts/: convert_notebooks.py  export_databricks_notebooks.py
demos/_template/: README.md  env.example  pyproject.toml
demos/_template/asset-bundles/: databricks.yml
demos/data-quality-with-dqx-odcs/: .gitignore  README.md  databricks.yml  env.example  pyproject.toml
demos/data-quality-with-dqx-odcs/asset-bundles/: databricks.yml
demos/data-quality-with-dqx-odcs/asset-bundles/resources/: dq_dashboard.yml  dq_demo_job.yml
demos/data-quality-with-dqx-odcs/contracts/: orders_contract.yaml
demos/data-quality-with-dqx-odcs/dashboards/: dq_report.lvdash.json
demos/data-quality-with-dqx-odcs/notebooks/: 01_generate_data.py  02_transform_data.py  03_validate_contract.py  04_dqx_quality_checks.py  05_quality_report.py
demos/r-airgap-install/: bundle_deps.py
docs/: branching-strategy.md  getting-started.md  project-structure.md
solution-accelerators/address-distance/: README.md
solution-accelerators/drools-databricks-dmn-enterprise-solution/: README.md  databricks.yml
solution-accelerators/drools-databricks-scala-java-udf-dmn-demo/: databricks.yml
solution-accelerators/incremental-filter-pipeline/: CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml  pytest.ini  variables.yml
solution-accelerators/incremental-filter-pipeline/asset-bundles/: databricks.yml
solution-accelerators/incremental-filter-pipeline/infra/: main.tf  outputs.tf  variables.tf
solution-accelerators/incremental-filter-pipeline/notebooks/: 00_setup_config_tables.py  01_generate_table_list.py  02_process_single_table.py  03_test_schema_evolution.py  04_create_job_definition.py  05_cleanup.py  06_pydabs_bundle_generator.py  README.md
solution-accelerators/incremental-filter-pipeline/scripts/: cleanup.sh
solution-accelerators/incremental-filter-pipeline/src/incremental_filter_pipeline/: __init__.py
solution-accelerators/incremental-filter-pipeline/tests/: __init__.py  conftest.py
solution-accelerators/incremental-filter-pipeline/tests/fixtures/: __init__.py
solution-accelerators/incremental-filter-pipeline/tests/integration/: __init__.py
solution-accelerators/xsd-to-synthetic/: CONTRIBUTING.md  LICENSE  README.md  env.example  explore.py  pyproject.toml  pytest.ini  variables.yml
solution-accelerators/xsd-to-synthetic/asset-bundles/: databricks.yml
solution-accelerators/xsd-to-synthetic/infra/: main.tf  outputs.tf  variables.tf
solution-accelerators/xsd-to-synthetic/notebooks/: README.md  TECHNICAL_SUMMARY.md  XSD to Synthetic - Library.ipynb  XSD to Synthetic.ipynb
solution-accelerators/xsd-to-synthetic/scripts/: cleanup.sh
solution-accelerators/xsd-to-synthetic/tests/: README.md  __init__.py  conftest.py  test_constraint_extraction.py  test_local_smoke.py  test_text_generation.py  test_type_aware_priority.py
solution-accelerators/xsd-to-synthetic/tests/fixtures/: __init__.py  expected_type_mappings.py
solution-accelerators/xsd-to-synthetic/tests/integration/: __init__.py  test_990T_schema.py  test_data_quality.py  test_efile_types.py
(+119 files in other folders)
