[project]
name = "data-quality-with-dqx-odcs"
version = "0.1.0"
description = "Contract-driven data quality validation using ODCS data contracts and Databricks Labs DQX"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "databricks-labs-dqx>=0.5.0",
    "pyyaml>=6.0",
    "protobuf>=5.26.1,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
